Fix compilation with Qt 5.6

QStringLiteral doesn't work everywhere apparently for Qt 5.6. Revert
some changes made by clazy.

Thanks to the patch from Wolfgang Bauer.

BUG: 392457
FIXED-IN: 3.1.3